# VideoFC-LLM

./: .gitignore  README.md  create_true_loader.py  fix_tests.py  implementation_plan.md  main.py  pipeline.py  pyproject.toml  requirements.txt  run_evaluation.py  run_pipeline.py  video_factcheck_framework.md
dataset/: __init__.py  dataset_adapter.py  dataset_example.py  dataset_loader.py  dataset_pipeline.py  dataset_schemas.py  evaluation.py  label_mapper.py  true_dataset.py  true_dataset_loader.py
evaluation/: Comprehensiveness.py  Fact_Hallucination.py  Reasons_Evidence_Omission.py  accuracy.py  bleu_rouge.py  conciseness.py  currency.py  faithfulness.py  gpt.py  logical_consistency.py  pre.py  run_evaluation.py  strength_of_evidence.py
models/: __init__.py  model_bundle.py  utils.py
modules/: __init__.py  module1_claim_decomposer.py  module2_cross_modal_consistency.py  module3_evidence_strength.py  module4_targeted_retrieval.py  module5_multihop_reasoning.py  module6_verdict_aggregator.py  module7_explainability.py  prompt_template.py  utils.py
schemas/: __init__.py  data_models.py
tests/: example_usage.py  test_dataset.py  test_modules.py  test_schemas.py  test_single_llm.py
