[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "video-factcheck"
version = "0.1.0"
description = "Explainable video fact-checking framework using small HuggingFace models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.40.0",
    "accelerate>=0.29.0",
    "tokenizers>=0.19.0",
    "huggingface-hub>=0.22.0",
    "bitsandbytes>=0.43.0",
    "pydantic>=2.6.0",
    "Pillow>=10.0.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["schemas*", "models*", "modules*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
# Add project root to sys.path so imports resolve without installation
pythonpath = ["."]

[tool.coverage.run]
source = ["schemas", "models", "modules", "pipeline"]
omit = ["tests/*", "example_usage.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
